add test for insupported platform